[package]
name = "source-map-deobfuscate-tool"
version = "0.1.0"
edition = "2024"
description = "A tool for deobfuscating source maps"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sourcemap = "9.2"
walkdir = "2.5"
anyhow = "1.0"
tokio = { version = "1.38", features = ["fs", "rt-multi-thread", "macros", "io-util"] }
futures = "0.3"
indicatif = "0.18"
colored = "3.0"
